WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273214
Unreviewed, fix the visionOS build after
277939@main
https://bugs.webkit.org/show_bug.cgi?id=273214
Summary
Unreviewed, fix the visionOS build after 277939@main
Abrar Rahman Protyasha
Reported
2024-04-24 14:57:22 PDT
277939@main
committed PAL::currentUserInterfaceIdiomIsVisionOrVisionLegacy(), which had been removed in
277892@main
during the window between EWS running on the change and the change being merged.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-24 14:57:34 PDT
<
rdar://problem/127012534
>
Abrar Rahman Protyasha
Comment 2
2024-04-24 14:59:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27713
EWS
Comment 3
2024-04-24 15:04:56 PDT
Committed
277949@main
(1abf6c07bc5b): <
https://commits.webkit.org/277949@main
> Reviewed commits have been landed. Closing PR #27713 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug