Unreviewed, fix the visionOS build after 277939@main https://bugs.webkit.org/show_bug.cgi?id=273214 rdar://127012534

Unreviewed build fix.

Fix the build by replacing a call to
PAL::currentUserInterfaceIdiomIsVisionOrVisionLegacy with
PAL::currentUserInterfaceIdiomIsVision, since the former had been
removed in 277892@main.

* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::overrideAvailableScreenSize):

Canonical link: https://commits.webkit.org/277949@main